Don't crash on disco replies from unavailable contacts.

process_client_types() assumed that gabble_presence_cache_get() returned
non-NULL, which is untrue.

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=31772>